<resources>
    <string name="language_cn">中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="language_auto">自动</string>
    <string name="app_name">TITAN</string>
    <string name="get_code">获取验证码</string>
    <string name="language">语言</string>
    <string name="start">开始</string>
    <string name="titan_plan">泰坦计划</string>
    <string name="user_name">用户名</string>
    <string name="user_namea">用户名(8-18位数字和字母组成)</string>
    <string name="account">账号</string>
    <string name="user_names">用户名：</string>
    <string name="login_pwd">登录密码</string>
    <string name="login_pwda">登录密码(8-18位数字和字母组成)</string>
    <string name="login">登录</string>
    <string name="right_validation">往右滑动验证></string>
    <string name="finish_validation">完成验证</string>
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包？</string>
    <string name="input_wallet">忘记密码？</string>
    <string name="creation">创建钱包</string>
    <string name="nick_name">昵称(2-18位)</string>
    <string name="nick_name_one">昵称:</string>
    <string name="confirm_login_pwd">确认登录密码</string>
    <string name="deal_pwd">交易密码</string>
    <string name="deal_pwda">交易密码(6位)</string>
    <string name="confirm_deal_pwd">确认交易密码</string>
    <string name="invite_code">邀请码</string>
    <string name="agreement">我已阅读，并同意《DAPP服务协议》内容</string>
    <string name="create">创建</string>
    <string name="wallet_mnemonic">钱包助记词</string>
    <string name="set_wallet_mnemonic">设置钱包助记词</string>
    <string name="set_wallet_mnemonic_tip">请选择三个随机提供的助记词，完成后点下一步</string>
    <string name="next_step">下一步</string>
    <string name="my_wallet">我的钱包</string>
    <string name="wallet_secret_key">钱包私钥</string>
    <string name="onclick_copy">点击复制</string>
    <string name="complete">完成</string>
    <string name="import_the_wallet">导入钱包</string>
    <string name="please_input_word">请输入助记词</string>
    <string name="please_input_private_key">请输入私钥</string>
    <string name="submit">提交</string>
    <string name="bind_references">绑定推荐人</string>
    <string name="vault">跳过</string>
    <string name="references_id">推荐人ID</string>
    <string name="network_error">请求超时，稍后尝试！</string>
    <string name="not_login">账号已在另一设备登陆</string>
    <string name="in_the_loading">加载中......</string>
    <string name="setting_title">设置</string>
    <string name="rb_wallet">钱包</string>
    <string name="rb_market">行情</string>
    <string name="rb_deal">交易</string>
    <string name="rb_information">资讯</string>
    <string name="rb_my">我的</string>
    <string name="normal_data">空空如也~</string>
    <string name="total_assets">总资产折合</string>
    <string name="assets">资产</string>
    <string name="unexchanged">待交易</string>
    <string name="to_be_airdropped">待空投</string>
    <string name="wallet_address">钱包地址</string>
    <string name="address_label">地址标签</string>
    <string name="prompt_words_export">导出助记词</string>
    <string name="secret_key_export">导出私钥</string>
    <string name="wallet_prompt_words">钱包助记词</string>
    <string name="balance">资产余额</string>
    <string name="frozen">交易冻结</string>
    <string name="qty">数量</string>
    <string name="please_ed">请输入</string>
    <string name="billing_records">账单记录</string>
    <string name="status">状态</string>
    <string name="source_address">来源地址</string>
    <string name="address">提币地址</string>
    <string name="label">提币标签</string>
    <string name="screen">筛选</string>
    <string name="time">时间</string>
    <string name="system">系统</string>
    <string name="exchange">交易</string>
    <string name="others">其他</string>
    <string name="type">类型</string>
    <string name="top_up_address">充币地址</string>
    <string name="copy">复制</string>
    <string name="over_copy">已复制</string>
    <string name="werm_tip">温馨提示：请务必仔细核对地址标签，这是您账户的唯一标识，否则资产将不可找回。</string>
    <string name="wallet_management">钱包管理</string>
    <string name="all">全部</string>
    <string name="unfrozen">交易激活</string>
    <string name="top_up_c">充币</string>
    <string name="top_exchange">兑换</string>
    <string name="withdraw_c">提币</string>
    <string name="exchange_bars">兑换BAR</string>
    <string name="exchange_titanc">闪兑TITANC</string>
    <string name="cash_withdraw_balance">可提现余额</string>
    <string name="exchange_transfer">交易所转入(未交易)</string>
    <string name="titan_top_up">TITAN 充币</string>
    <string name="bar_top_up">BAR 充币</string>
    <string name="titanc_top_up">TITANC 充币</string>
    <string name="titan_withdraw">TITAN 提币</string>
    <string name="titan_trading_particulars">TITAN 交易详情</string>
    <string name="pls_one">请输入提币地址</string>
    <string name="pls_two">请输入地址标签（请务必填写并仔细核对ID）</string>
    <string name="pls_three">请输入提币数量</string>
    <string name="pls_four">提币手续费：</string>
    <string name="pls_four1">提币手续费</string>
    <string name="sum_100">提币数量应大于100</string>
    <string name="confirm_to_mention_money">确认提币</string>
    <string name="deal_time">交易时间</string>
    <string name="blockchain_trade_id">区块链交易ID</string>
    <string name="titan_unclaimed">TITANC</string>
    <string name="usd_to_be_airdropped">USD待空投</string>
    <string name="qty_to_be_airdropped">待空投数量</string>
    <string name="qty_unclaimed">待领取数量</string>
    <string name="airdrop">空投</string>
    <string name="airdrop_release">空投释放</string>
    <string name="airdrop_matching">空投配比</string>
    <string name="level_drop">等级空投</string>
    <string name="airdrop_qty">空投数量</string>
    <string name="titanc_conversion_qty">激活TITANC数量</string>
    <string name="titanc_award_qty">空投TITANC数量</string>
    <string name="titanc_get_qty">获得TITANC数量</string>
    <string name="usd_award_qty">空投USD数量</string>
    <string name="usd_release_qty">释放USD数量</string>
    <string name="get_usd_award_qty">获得USD数量</string>
    <string name="wallet_list">钱包列表</string>
    <string name="import_new_wallet">导入新钱包</string>
    <string name="set_wallet">设置钱包</string>
    <string name="pls_input_wallet_name">请输入钱包备注</string>
    <string name="information_and_news">资讯新闻</string>
    <string name="notice">公告</string>
    <string name="notices">公告：</string>
    <string name="notice_details">公告详情</string>
    <string name="tip">亲爱的用户:</string>
    <string name="intelligent_transaction">智能交易</string>
    <string name="Qty">数量</string>
    <string name="exchange_volume">交易额</string>
    <string name="current_entrustment">当前委托</string>
    <string name="historical_entrustment">历史委托</string>
    <string name="direction">方向</string>
    <string name="price">价格</string>
    <string name="prices">单价</string>
    <string name="tip_one">1.开启智能交易后，将会每个小时整点根据您的TITAN余额进行自动交易；</string>
    <string name="tip_two">2.自动挂单的额度：</string>
    <string name="tip_three">a.如果用户的TITANC*20小于转入TITAN的剩余量，则为用户的TITANC*20；</string>
    <string name="tip_four">b.如果用户的TITANC*20大于转入TITAN的剩余量，则为用户的入TITAN的剩余量；</string>
    <string name="confirm_to_open">确认开启</string>
    <string name="inviting_code">邀请码：</string>
    <string name="asset_balance">资产余额</string>
    <string name="asset_balance1">可用余额</string>
    <string name="security_center">安全中心</string>
    <string name="billing_details">账单明细</string>
    <string name="my_invitation">我的邀请</string>
    <string name="online_customer_service">在线客服</string>
    <string name="advice_feedback">建议反馈</string>
    <string name="feedback_list">反馈列表</string>
    <string name="feedback_details">反馈详情</string>
    <string name="disclaimer">免责声明</string>
    <string name="transaction_release">交易发布</string>
    <string name="personal_data">个人资料</string>
    <string name="my_profile_picture">我的头像</string>
    <string name="my_nickname">我的昵称</string>
    <string name="binding">绑定</string>
    <string name="phone">手机号</string>
    <string name="log_out">安全退出</string>
    <string name="binding_phone">绑定手机号</string>
    <string name="binding_newphone">修改手机号</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="reset_information">重置信息</string>
    <string name="modify_login_pwd">修改登录密码</string>
    <string name="old_login_pwd">原密码</string>
    <string name="new_login_pwd">新密码</string>
    <string name="confirm_new_login_pwd">确认新密码</string>
    <string name="modify_deal_pwd">修改交易密码</string>
    <string name="new_deal_pwd">新交易密码</string>
    <string name="confirm">确认</string>
    <string name="cash_value">充值提现</string>
    <string name="coin_currency_trading">币币交易</string>
    <string name="award">奖励</string>
    <string name="withdraw_service_fee">提现手续费</string>
    <string name="withdraw">提现</string>
    <string name="top_up">充值</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="qty_buy">买入数量</string>
    <string name="qty_sell">卖出数量</string>
    <string name="qty_cost">花费数量</string>
    <string name="qty_acquire">获得数量</string>
    <string name="cost">花费</string>
    <string name="service_fee">手续费</string>
    <string name="sell_release">卖出释放</string>
    <string name="trade_get">交易获得</string>
    <string name="direct_push_trade_gains">矿层交易获得</string>
    <string name="rank_trading_weight">矿池交易获得</string>
    <string name="rank_trading_weig">等级交易加权</string>
    <string name="rank_trading_weight2">等级交易获得</string>
    <string name="peer_acquisition">同级交易获得</string>
    <string name="transon_release">交易释放</string>
    <string name="delete">删除</string>
    <string name="my_invite">我的邀请</string>
    <string name="invited_friends">已邀请旷工</string>
    <string name="amount_of_reward">奖励数额 (TITAN)</string>
    <string name="download_ure">下载链接</string>
    <string name="invite_url">邀请链接:</string>
    <string name="register_url">注册链接:</string>
    <string name="friend_list">好友列表</string>
    <string name="register_time">注册时间</string>
    <string name="register_time_one">注册时间:</string>
    <string name="total_number">矿池有效旷工</string>
    <string name="total_xq_number">大矿区产量总额（USD）</string>
    <string name="total_number_sun">矿池产量总额:</string>
    <string name="total_num_sun">矿池产量总额(USD)</string>
    <string name="total_xq_number_sun">小矿区产量总额(USD)</string>
    <string name="send">发送</string>
    <string name="whether_to_exit_the_current_account">是否退出当前账号!</string>
    <string name="confirm_dialog">确定</string>
    <string name="cancel">取消</string>
    <string name="do_not_take_screenshot">请勿截图</string>
    <string name="do_not_take_screenshot_content">他人若得到您得助记词，可直接获取你得资产。请务必抄写备份好您得助记词，并存放在安全位置。</string>
    <string name="got_it">知道了</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="you_have_not_set_the_wallet_address_please_set_it_first">您还没有设置钱包地址，请先去设置！</string>
    <string name="real_name_tip">您还未进行实名认证，请前去认证！</string>
    <string name="please_enter_transaction_PW">请输入交易密码</string>
    <string name="PW">密码</string>
    <string name="take_photo">拍照</string>
    <string name="photo_album">从相册获取图片</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="enter_a_new_nickname">输入新的昵称</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="login_center">登录中。。。</string>
    <string name="verification_code_sent">已发送验证码</string>
    <string name="user_name_cannot_be_empty">用户名不能为空</string>
    <string name="nick_name_cannot_be_empty">昵称不能为空</string>
    <string name="the_cell_phone_number_cannot_be_empty">手机号不能为空</string>
    <string name="please_input_the_correct_mobile_phone_number">请输入正确的手机号</string>
    <string name="the_verification_code_cannot_be_empty">验证码不能为空</string>
    <string name="the_login_password_cannot_be_empty">登录密码不能为空</string>
    <string name="confirm_the_login_password_cannot_be_empty">确认登录密码不能为空</string>
    <string name="invitation_code">邀请码不能为空</string>
    <string name="of_mineral">矿层交易激活</string>
    <string name="ore_pool">矿池交易激活</string>
    <string name="turn_out">转出</string>
    <string name="turn_put">转入</string>
    <string name="flash_exchange">闪兑</string>
</resources>