<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lanjing.com.titan.activity.IntelligentTradingActivity">
    <com.lxh.baselibray.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="@dimen/titil_view_height"
        android:background="@color/default_white_bg"
        app:ivLeftPic="@mipmap/icon_page_return"
        app:titleTextColor="@color/common_black"
        app:tvTitleText="@string/intelligent_transaction" />

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/shape_gray_bg"
        android:layout_margin="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tip_one"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tip_two"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tip_three"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tip_four"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_39"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_radius_blue"
        android:foreground="@drawable/bg_white"
        android:gravity="center"
        android:text="@string/confirm_to_open"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />

</LinearLayout>
