<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lanjing.com.titan.activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/default_white_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_wallet"
            style="@style/main_rb_style"
            android:drawableTop="@drawable/selector_wallet_rb_img"
            android:text="@string/rb_wallet" />

        <RadioButton
            android:id="@+id/rb_market"
            style="@style/main_rb_style"
            android:drawableTop="@drawable/selector_market_rb_img"
            android:text="@string/rb_market" />

        <RadioButton
            android:id="@+id/rb_deal"
            style="@style/main_rb_style"
            android:drawableTop="@drawable/selector_deal_rb_img"
            android:text="@string/rb_deal" />

        <RadioButton
            android:id="@+id/rb_information"
            style="@style/main_rb_style"
            android:drawableTop="@drawable/selector_information_rb_img"
            android:text="@string/rb_information" />

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/main_rb_style"
            android:drawableTop="@drawable/selector_my_rb_img"
            android:text="@string/rb_my" />
    </RadioGroup>

</LinearLayout>
