<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="lanjing.com.titan.activity.SecurityCenterActivity">

    <com.lxh.baselibray.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="@dimen/titil_view_height"
        android:background="@color/default_white_bg"
        app:ivLeftPic="@mipmap/icon_page_return"
        app:titleTextColor="@color/common_black"
        app:tvTitleText="@string/security_center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:background="@color/public_bg">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:foreground="@drawable/bg_white"
            android:layout_height="@dimen/dp_45"
            android:drawablePadding="@dimen/dp_10"
            android:drawableRight="@mipmap/icon_open"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:text="@string/phone"
            android:textColor="@color/common_black"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/tv_phone_tx"
            android:text="@string/binding"
            android:textColor="@color/blue"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <TextView
        android:id="@+id/tv_login_pwd"
        android:layout_width="match_parent"
        android:foreground="@drawable/bg_white"
        android:layout_height="@dimen/dp_45"
        android:drawablePadding="@dimen/dp_10"
        android:drawableRight="@mipmap/icon_open"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/login_pwd"
        android:textColor="@color/common_black"
        android:textSize="@dimen/sp_13" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <TextView
        android:id="@+id/tv_deal_pwd"
        android:layout_width="match_parent"
        android:foreground="@drawable/bg_white"
        android:layout_height="@dimen/dp_45"
        android:drawablePadding="@dimen/dp_10"
        android:drawableRight="@mipmap/icon_open"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/deal_pwd"
        android:textColor="@color/common_black"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <TextView
        android:id="@+id/login_out_btn"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_39"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/btn_radius_blue"
        android:foreground="@drawable/bg_white"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />
</LinearLayout>
