<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lanjing.com.titan.activity.ImportWalletBindActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bind_references"
            android:textColor="@color/common_black"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/vault"
            android:textColor="@drawable/selector_text_three" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/references_id"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_16" />

    <EditText
        android:id="@+id/ed_references_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_gray_bg"
        android:gravity="center_vertical"
        android:inputType="number"
        android:maxLength="7"
        android:paddingLeft="@dimen/dp_10"
        android:textColor="@color/common_black"
        android:textCursorDrawable="@drawable/cursor_style"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_39"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/btn_radius_blue"
        android:foreground="@drawable/bg_white"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />
</LinearLayout>
