<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lanjing.com.titan.activity.ExportKeyActivity">

    <com.lxh.baselibray.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="@dimen/titil_view_height"
        android:background="@color/default_white_bg"
        app:ivLeftPic="@mipmap/icon_page_return"
        app:titleTextColor="@color/common_black"
        app:tvTitleText="@string/secret_key_export" />

    <LinearLayout
        android:layout_margin="@dimen/dp_15"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/wallet_secret_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:id="@+id/tv_private_key"
            android:background="@drawable/shape_gray_bg"
            android:padding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:textColor="@color/common_black"
            android:textSize="@dimen/sp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_copy_private_key"
            android:gravity="right"
            android:textSize="@dimen/sp_16"
            android:textColor="@drawable/selector_text_three"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/onclick_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
